# khronos

./: Cargo.toml  Dockerfile  README.md  fly.toml  sqlx-data.json
migrations/: 20230414153724_groups.sql  20230414153728_events.sql
src/: auth.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  models.rs
src/routes/: calendar.rs  events.rs  groups.rs  health.rs  mod.rs  static_files.rs
static/: index.html  main.js  style.css
