[package]
name = "khronos"
version = "0.0.0"
edition = "2021"
default-run = "khronos"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]
axum = { version = "0.6.16", features = ["headers"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "compression-br", "compression-gzip", "compression-deflate"] }

sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline", "uuid"] }

config = "0.13.3"
dotenv = "0.15.0"

color-eyre = "0.6.2"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

displaydoc = "0.2.3"
thiserror = "1.0.40"

once_cell = { version = "1.17.1", features = ["parking_lot"] }
serde = { version = "1.0.160", features = ["derive"] }
regex = "1.7.3"
include_dir = "0.7.3"
mime_guess = "2.0.4"
chrono = "0.4.24"
ics = "0.5.8"
uuid = { version = "1.3.1", features = ["v4"] }
jsonwebtoken = "8.3.0"
clap = { version = "4.2.3", features = ["derive"] }
